--- a/css/style.css
+++ b/css/style.css
@@ -286,7 +286,7 @@ header .navbar {
     font-size: 75px;
     font-weight: 600;
     margin-left: -3px;
-color:#21baea;
+    color: #21baea;
 }
 
 .home .home-content .text-3 {
@@ -426,7 +426,7 @@ color:#21baea;
 }
 
 .menu-section {
-    color:  black;
+    color: black;
     /* background: var(--primary-color); */
     padding: 50px 0 100px;
 }
@@ -794,6 +794,7 @@ color:#21baea;
         flex-direction: column-reverse;
     }
 }
+
 .campus-section {
     padding: 60px 30px;
     background-color: #fff;
@@ -805,7 +806,7 @@ color:#21baea;
     font-size: 32px;
     color: black;
     margin-bottom: 60px;
-    
+
 }
 
 .campus-map-container {
@@ -878,6 +879,7 @@ color:#21baea;
         gap: 20px;
     }
 }
+
 /* Footer Section */
 #footer {
     background-color: var(--pn-blue);
@@ -943,16 +945,20 @@ color:#21baea;
         grid-template-columns: 1fr;
     }
 }
+
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
 }
+
 body {
     background: #ecececdb;
 }
+
 .card-list {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
@@ -961,6 +967,7 @@ body {
     padding: 20px;
     gap: 20px;
 }
+
 .card-list .card-item {
     background: #fff;
     padding: 26px;
@@ -972,15 +979,18 @@ body {
     border: 2px solid transparent;
     transition: border 0.5s ease;
 }
+
 .card-list .card-item:hover {
     border: 2px solid #000;
 }
+
 .card-list .card-item img {
     width: 100%;
     aspect-ratio: 16/9;
     border-radius: 8px;
     object-fit: cover;
 }
+
 .card-list span {
     display: inline-block;
     background: #F7DFF5;
@@ -990,24 +1000,29 @@ body {
     border-radius: 50px;
     font-weight: 600;
 }
+
 .card-list .developer {
-    background-color: #F7DFF5; 
+    background-color: #F7DFF5;
     color: #B22485;
-}   
+}
+
 .card-list .designer {
     background-color: #d1e8ff;
     color: #2968a8;
 }
+
 .card-list .editor {
-    background-color: #d6f8d6; 
+    background-color: #d6f8d6;
     color: #205c20;
 }
+
 .card-item h3 {
     color: #000;
     font-size: 1.438rem;
     margin-top: 28px;
     font-weight: 600;
 }
+
 .card-item .arrow {
     display: flex;
     align-items: center;
@@ -1021,15 +1036,18 @@ body {
     margin-top: 40px;
     transition: 0.2s ease;
 }
-.card-list .card-item:hover .arrow  {
+
+.card-list .card-item:hover .arrow {
     background: #000;
-    color: #fff; 
+    color: #fff;
 }
+
 @media (max-width: 1200px) {
     .card-list .card-item {
         padding: 15px;
     }
 }
+
 @media screen and (max-width: 980px) {
     .card-list {
         margin: 0 auto;
@@ -1185,5 +1203,179 @@ body {
         width: 35px;
         font-size: 23px;
         line-height: 38px;
+    }
+}
+
+
+/* Responsive media query code for max width 1024px */
+@media screen and (max-width: 1024px) {
+    .menu-section .menu-list {
+        gap: 60px;
+    }
+
+    .menu-section .menu-list .menu-item {
+        width: calc(100% / 3 - 60px);
+    }
+}
+
+.navbar :is(#menu-open-button, #menu-close-button) {
+    display: none;
+}
+
+/* Responsive media query code for max width 900px */
+@media screen and (max-width: 900px) {
+    :root {
+        --font-size-m: 1rem;
+        --font-size-l: 1.3rem;
+        --font-size-xl: 1.5rem;
+        --font-size-xxl: 1.8rem;
+    }
+
+    body.show-mobile-menu {
+        overflow: hidden;
+    }
+
+    body.show-mobile-menu header::before {
+        content: "";
+        content: '';
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        backdrop-filter: blur(5px);
+        background: rgba(0, 0, 0, 0.2);
+    }
+
+    .navbar :is(#menu-open-button, #menu-close-button) {
+        font-size: var(--font-size-l);
+        display: block;
+    }
+
+    .navbar :is(#menu-open-button, #menu-close-button):hover {
+        color: var(--secondary-color) !important;
+    }
+
+    .navbar #menu-open-button {
+        color: #fff;
+    }
+
+    .navbar .nav-menu #menu-close-button {
+        position: absolute;
+        right: 30px;
+        top: 30px;
+    }
+
+    .navbar .nav-menu {
+        display: block;
+        background: #fff;
+        position: fixed;
+        top: 0;
+        left: -300px;
+        height: 100%;
+        width: 300px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        padding-top: 100px;
+        transition: left 0.2s ease;
+    }
+
+    body.show-mobile-menu .nav-menu {
+        left: 0;
+    }
+
+    .navbar .nav-menu .nav-link {
+        display: block;
+        margin-top: 17px;
+        padding: 10px 22px;
+        color: var(--dark-color);
+        font-size: var(--font-size-l);
+    }
+
+    .hero-section .section-content {
+        text-align: center;
+        gap: 50px;
+        padding: 30px 20px 20px;
+        justify-content: center;
+        flex-direction: column-reverse;
+    }
+
+    .hero-section .hero-details :is(.subtitle, .description),
+    .about-section .about-details,
+    .contact-section .contact-form {
+        max-width: 100%;
+    }
+
+    .hero-section .hero-details .buttons {
+        justify-content: center;
+    }
+
+    .hero-section .hero-image-wrapper {
+        max-width: 270px;
+        margin-right: 0;
+    }
+
+    .about-section .section-content {
+        gap: 70px;
+        flex-direction: column-reverse;
+    }
+
+    .about-section .about-image-wrapper .about-image {
+        width: 100%;
+        height: 100%;
+        aspect-ratio: 1;
+        max-width: 250px;
+    }
+
+    .menu-section .menu-list {
+        gap: 30px;
+    }
+
+    .menu-section .menu-list .menu-item {
+        width: calc(100% / 2 - 30px);
+    }
+
+    .menu-section .menu-list .menu-item .menu-image {
+        max-width: 200px;
+    }
+
+    .gallery-section .gallery-list {
+        gap: 30px;
+    }
+
+    .gallery-section .gallery-list .gallery-item {
+        width: calc(100% / 2 - 30px);
+    }
+
+    .contact-section .section-content {
+        align-items: center;
+        flex-direction: column-reverse;
+    }
+}
+
+
+@media screen and (max-width: 640px) {
+
+    .menu-section .menu-list .menu-item,
+    .gallery-section .gallery-list .gallery-item {
+        width: 100%;
+    }
+
+    .menu-section .menu-list {
+        gap: 60px;
+    }
+
+    .testimonials-section .slider-wrapper {
+        margin: 0 0 30px;
+    }
+
+    .testimonials-section .swiper-slide-button {
+        display: none;
+    }
+
+    .footer-section .section-content {
+        flex-direction: column;
+        gap: 20px;
     }
 }
